--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/Tatiana22704/storeapp#readme",
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "sqlite3": "^5.1.7"
   }
 }
